--- a/YAMS_Project/Y-MVC/Views/Account/Login.cshtml
+++ b/YAMS_Project/Y-MVC/Views/Account/Login.cshtml
@@ -8,10 +8,37 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.js"></script>
+    <script type="text/javascript">
+        function submitBtn() {
+            var data = $("#loginForm").serialize();
+            console.log(data);
+            alert(data);
+            $.ajax({
+                type: 'POST',
+                url: '/Members/Authentication',
+                data: data,
+                success: function (result) {
+                    alert('Successfully recieved data');
+                    console.log(result);
+                },
+                error: function () {
+                    alert('failed the test');
+                    console.log('Failed');
+                }
+            })
+        }
+    </script>
     <style>
         body {
             background-color: #e5e5e5;
             text-align: -webkit-center;
+        }
+        input {
+            width: -webkit-fill-available;
+            text-align: center;
+            font-size: large;
+            border: none;
+            border-radius: 8px;
         }
         table{
             text-align:center;
@@ -20,6 +47,7 @@
             padding: 7px;
         }
         img {
+            margin:30px;
             display: block;
             max-width: 100%;
             height: auto;
@@ -35,7 +63,7 @@
 <body>
     <div class="row">
         <div class="col-md-10">
-            <form method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="Login">
+            <form id="loginForm" method="post" enctype="multipart/form-data" asp-controller="Account" asp-action="Login">
                 <table>
                     <tr >
                         <td>
@@ -55,7 +83,7 @@
                     </tr>
                     <tr>
                         <td class="col-md-offset-2 col-md-10">
-                        <input class="btn" type="submit" value="CONTINUE" onclick="function(call)" />
+                        <input class="btn" type="submit" value="CONTINUE"  />
                         </td>
                     </tr>
                     
@@ -65,30 +93,6 @@
         </div>
     </div>
 </body>
-<script>
-    $(document).ready(function (call())
-                {
-                    $("#DropDownName").change(function ()
-                    {
-                        $.ajax({
-                            type: "POST",
-                            dataType: "text",
-                            url: "@(Url.Action("Authentication", "Members"))",
-                            data: {
-                                "param1": $("username").val(),
-                                "param2": $("password").val()
-                            },
 
-                            success: function (response) {
-
-                            @Url.Action("Index", "Dashboard")
-                            },
-                            
-
-
-                        });
-                    });　
-                });
-</script>
 </html>
 
