--- a/YAMS_Project/Y-MVC/Views/Dashboard/Index.cshtml
+++ b/YAMS_Project/Y-MVC/Views/Dashboard/Index.cshtml
@@ -30,3 +30,9 @@
 <h2>
     welcome to dashboard of the project
 </h2>
+
+<footer class="border-top footer text-muted">
+    <div class="container">
+        &copy; 2021 - YAMS - <a asp-area="" asp-controller="Account" asp-action="Login">Project</a>
+    </div>
+</footer>
