--- a/YAMS_Project/Y-MVC/Views/Account/Create.cshtml
+++ b/YAMS_Project/Y-MVC/Views/Account/Create.cshtml
@@ -60,7 +60,7 @@
                         <td><input type="password" id="password" name="password" placeholder="Password" required /></td>
                     </tr>
                     <tr>
-                        <td><input type="password" id="confirm_password" name="password" placeholder="Password" required /></td>
+                        <td><input type="password" id="ConfirmPassword" name="ConfirmPassword" placeholder="Password" required /></td>
                     </tr>
                     <tr>
                         <td><input type="email" id="email" name="email" placeholder="Email" required /></td>
